--- a/firebase.json
+++ b/firebase.json
@@ -1,14 +1,16 @@
 {
   "hosting": {
     "public": "frontend",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
     "rewrites": [
       {
-        "source": "/**",
+        "source": "**",
         "destination": "/index.html"
       }
     ]
-  },
-  "functions": {
-    "source": "backend/functions"
   }
 }
