add permissions for pull request workflows in Firebase and Supabase configurations

--- a/.github/workflows/supabase-functions-pull-request.yml
+++ b/.github/workflows/supabase-functions-pull-request.yml
@@ -8,6 +8,9 @@ jobs:
   deploy:
     if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write    
     env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
           PROJECT_ID: ${{ vars.PROJECT_ID }}
